[gd_scene load_steps=3 format=2]

[ext_resource path="res://assets/font/themeA.tres" type="Theme" id=1]
[ext_resource path="res://Scenes/Main.gd" type="Script" id=2]

[node name="Main" type="Node2D"]
script = ExtResource( 2 )

[node name="User" type="Panel" parent="."]
margin_right = 800.0
margin_bottom = 43.0
theme = ExtResource( 1 )

[node name="Label" type="Label" parent="User"]
anchor_right = 1.0
margin_left = 28.0
margin_top = 4.0
margin_right = -127.0
margin_bottom = 40.0
text = "Bienvenido User!"
valign = 1

[node name="btn_logout" type="Button" parent="User"]
anchor_right = 1.0
margin_left = 677.0
margin_right = -1.0
margin_bottom = 42.0
text = "LogOut"

[node name="btn_new" type="Button" parent="User"]
anchor_right = 1.0
margin_left = 577.0
margin_top = 403.0
margin_right = -3.0
margin_bottom = 445.0
text = "NUEVA PARTIDA"

[node name="Games" type="ScrollContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 219.0
margin_top = 73.0
margin_right = 626.0
margin_bottom = 371.0
theme = ExtResource( 1 )

[node name="VBox" type="VBoxContainer" parent="Games"]
margin_right = 407.0
margin_bottom = 298.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label2" type="Label" parent="Games/VBox"]
margin_right = 407.0
margin_bottom = 36.0
text = "PARTIDAS DISPONIBLES"
align = 1
valign = 1

[node name="NewGamePopup" type="ColorRect" parent="."]
visible = false
margin_right = 800.0
margin_bottom = 450.0
theme = ExtResource( 1 )
color = Color( 0.117647, 0.117647, 0.117647, 0.929412 )

[node name="Label2" type="Label" parent="NewGamePopup"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -62.0
margin_bottom = 13.0
text = "CREANDO NUEVA PARTIDA
ESPERE POR FAVOR..."
align = 1
valign = 1
